
- Tue Nov 10 2009 (Martin Haas)
  - Bugfix: pgm3: Pulldown-Menu without selected FHTDEV not possible any more

- Thu Nov 12 2009 (Rudi)
  - The duplicate pool added. The check routine is called from the Dispatch
    routine (so it will affecc CUL/FHZ and CM11), and for FS20 calls from
    the CUL and FHZ Write function.
    Duplicates within 0.5 seconds are filtered if they are not reported by the
    same IO Unit. Existing check for IODev removed from BS USF1000 FS20 FHT HMS
    KS300 CUL_WS CUL_EM X10.

- Mon Nov 16 2009 (MartinH)
  - pgm3: Google-Weather-Api added. Display of all Logs including the
  FS20-devices (grep on fhem.log) The status of the batteries of FHT and HMS
  are shown in the graphics. php4 disabled. Now only php5 is supported. A
  lot of examples of the UserDefs are added. The pgm3-section of fhem.html was
  changed.

- Sat Dec 19 2009 (MartinH)
  - pgm3: Automatic support for CUL_WS (S300TH) added

- Mon Dec 21 2009 (Rudi)
  - In order to support automatic device creation (coming 98_autocreate.pm),
    the return value in case of an undefined device should contain parameters
    for a correct define statement.

- Fri Jan  1 2010
  - my %defptr is no $modules{modname}{defptr} in order for CommandReload to
    work. There is also a second parameter $modules{modname}{ldata} which will
    be saved over a Reload, used by the FS20 for the follow feature.
  - ignore attribute added to ignore devices of the neighbour

- Fri Jan 8 2010 (MartinH)
    Interface to fhem changes to stream_socket_client. Table-format on
    Android-Browser optimized. Optimized for smartphones. Rooms possible for
    Webcam and Google-Weather.  Output of html better formated and skinable --
    change the colors.

- Sat  Feb 6 2010 (Boris)
  - feature: on-for-timer added for X10 modules and bug fixed for overlapping
    on-till and on-for-timer commands (Boris)
    
- Thu Jun 30 2011 (Maz Rashid)
  - Introducing 00_TUL.pm and 10_EIB.pm modules for connecting FHEM on EIB.